--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -2,6 +2,18 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  list-style: none;
+  text-decoration: none;
+  border: none;
+  outline: none;
+}
+*:focus {
+  border: none;
+  outline: none;
+}
+:root {
+  --green-color: #00a365;
+  --gray-color: #696969;
 }
 body {
   font-family: Tahoma, Arial;
