--- a/front-end/src/comp/Signup.css
+++ b/front-end/src/comp/Signup.css
@@ -1,98 +1,155 @@
 .sign-container {
     min-height: 100vh;
     width: 100%;
-    background-color: #eee;
+    padding-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--section-color);
+}
+.sign-container .signup {
+    width: 80%;
+    display: flex;
+    flex-direction: row-reverse;
+    box-shadow: 0px 10px 30px 0px rgba(0,0,0,0.1);
+    border-radius: 6px;
+}
+.signup .logo {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 6px;
+    border-top-left-radius: unset;
+    border-bottom-left-radius: unset;
+    background-color: #102f4408;
+    padding: 50px;
+}
+.signup .logo img {
+    width: 160px;
+    height: auto;
+    border-radius: 50%;
+    box-shadow: 0px 10px 30px 0px rgb(0 0 0 / 20%);
+}
+.signup .content {
+    flex: 1;
+    padding: 50px;
+    background-color: #f1f5f9;
+    border-radius: 6px;
+    border-top-right-radius: unset;
+    border-bottom-right-radius: unset;
+}
+.signup .content h1 {
+    font-size: 36px;
+    color: var(--gray-color);
+    text-align: center;
+    margin: 0 0 10px 0;
+}
+.signup .content p {
+    text-align: center;
+    font-size: 14px;
+    color: var(--gray-color);
+}
+.signup .content form {
+    margin-top: 30px;
+}
+.signup .content form label {
+    font-size: 14px;
+    color: var(--gray-color);
+}
+.signup .content form input {
+    padding: 15px;
+    width: 100%;
+    border-radius: 4px;
+    height: 100%;
+    border: 1px solid #acacad;
+    background-color: #ffffff;
+    margin: 7px 0 20px;
+}
+.signup .content form input::placeholder {
+    font-size: 14px;
+    color: #acacad;
+}
+.signup .content form input:focus,
+.signup .content form input:hover{
+    box-shadow: 0 5px 15px 0 rgba(0,0,0,0.1);
+}
+.signup .content form .signMsg {
+    background-color: #ffdbe3;
+    display: none;
+    justify-content: space-between;
+    align-items: center;
+    padding: 7px;
+    margin-bottom: 10px;
+    border-radius: 6px;
+}
+.signup .content form .signMsg h2 {
+    color: #cd1532;
+    font-size: 15px;
+    font-weight: 400;
+    text-align: center;
+    margin: 0;
+}
+.signup .content form .signMsg div {
+    background-color: #cd1532;
+    color: #fff;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    margin: 0;
+    cursor: pointer;
+    transition: 0.3s;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.sign-container .signup {
+.signup .content form .signMsg div:hover {
+    background-color: #bf1e37;
+}
+.signup .content form .signBtn{
+    display: block;
     width: 70%;
-    background-color: #fff;
-    height: 400px;
-    display: flex;
-    box-shadow: 0px 0px 15px 0px #0000008a;
-}
-.signup .text {
-    background-color: var(--green-color);
-    color: #fff;
-    clip-path: polygon(0 0, 0 100%, 100% 0);
-    width: 100%;
-    text-align: center;
-}
-.signup .text h1 {
-    text-align: center;
-    margin: 30px 0 5px;
-    font-size: 35px;
-    letter-spacing: 5px;
-}
-.signup form {
-    color: var(--gray-color);
-    padding: 20px;
-    width: 90%;
-}
-.signup form h2 {
-    margin: 20px 0;
-    text-align: center;
-    font-size: 30px;
-}
-.signup form label {
-    display: block;
-    margin-bottom: 5px;
-    margin-left: 10px;
-}
-.signup form input {
-    padding: 10px;
-    border: 1px solid var(--gray-color);
+    background-color: var(--dark-color);
+    border: 1px solid var(--dark-color);
+    padding: 15px;
     border-radius: 50px;
-    width: 100%;
-    margin-bottom: 20px;
-}
-.signup form input:focus {
-    outline: 1px solid var(--green-color);
-}
-.signup form button {
-    display: block;
-    width: 100%;
-    border: 1px solid var(--green-color);
-    background-color: var(--green-color);
-    padding: 10px;
-    border-radius: 50px;
-    font-size: 18px;
     font-weight: bold;
     color: #fff;
     cursor: pointer;
-    margin-bottom: 10px;
+    margin: 20px auto 25px;
     transition: 0.3s;
 }
-.signup form button:hover {
-    background-color: #fff;
-    color: var(--green-color);
+.signup .content form .signBtn:hover {
+    background-color: transparent;
+    color: var(--dark-color);
+}
+.signup .content form a {
+    color: var(--dark-color);
+    font-size: 14px;
+    transition: 0.3s;
+    font-weight: bold;
+    display: block;
+    text-align: center;
+}
+.signup .content form a:hover {
+    color: var(--gray-color);
+    text-decoration: underline;
 }
 
-@media (max-width: 991px) {
+@media (max-width: 767px) {
+    .sign-container {
+        display: block;
+        padding: 0;
+    }
     .sign-container .signup {
-        display: unset;
         width: 100%;
-        min-height: 100vh;
+        display: block;
+        height: 100vh;
     }
-    .signup .text {
-        clip-path: none;
-        padding: 15px;
+    .signup .logo {
+        padding: 20px;
     }
-    .signup .text h1 {
-        margin: 0;
-    }
-    .signup form {
-        width: 100%;
-    }
-    .signup form h2 {
-        margin: 0 0 20px;
-    }
-    .signup form label {
-        font-size: 14px;
-    }
-    .signup form button {
-        margin-top: 15px;
+    .signup .content {
+        padding: 30px;
     }
 }
