--- a/front-end/src/comp/Login.css
+++ b/front-end/src/comp/Login.css
@@ -1,84 +1,69 @@
-.login-container {
+.login {
     min-height: 100vh;
     width: 100%;
-    background-color: #eee;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    background-color: var(--section-color);
+    padding-bottom: 20px;
 }
-.login-container .login {
-    width: 70%;
-    background-color: #fff;
-    height: 400px;
-    display: flex;
-    box-shadow: 0px 0px 15px 0px #0000008a;
-}
-.login .text {
-    background-color: var(--green-color);
-    color: #fff;
-    clip-path: polygon(0 0, 0 100%, 100% 0);
-    width: 100%;
-    text-align: center;
-}
-.login .text h1 {
-    text-align: center;
-    margin: 30px 0px 5px;
-    font-size: 32px;
-    letter-spacing: 4px;
-}
-.login form {
-    color: var(--gray-color);
+.login .logo {
+    margin: auto;
+    border-radius: 50%;
     padding: 20px;
-    width: 90%;
-}
-.login form h2 {
-    margin: 20px 0;
     text-align: center;
-    font-size: 30px;
-}
-.login form label {
-    display: block;
-    margin-bottom: 5px;
-    margin-left: 10px;
-}
-.login form input {
-    padding: 10px;
-    border: 1px solid var(--gray-color);
-    border-radius: 50px;
-    width: 100%;
-    margin-bottom: 20px;
-}
-.login form input:focus {
-    outline: 1px solid var(--green-color);
-}
-.login form .loginBtn {
-    display: block;
-    width: 100%;
-    border: 1px solid var(--green-color);
-    background-color: var(--green-color);
-    padding: 10px;
-    border-radius: 50px;
-    font-size: 18px;
-    font-weight: bold;
-    color: #fff;
-    cursor: pointer;
-    margin-bottom: 10px;
-    transition: 0.3s;
-}
-.login form .loginBtn:hover {
-    background-color: #fff;
-    color: var(--green-color);
-}
-.login form a {
-    margin-left: 10px;
-    color: var(--green-color);
-    font-size: 14px;
-    transition: 0.3s;
-}
-.login form a:hover {
+} 
+.login .logo img {
+    width: 120px;
+    height: auto;
+    border-radius: 50%;
+} 
+.login h1 {
+    text-align: center;
+    font-size: 36px;
     color: var(--gray-color);
+    margin: 0 0 30px;
+} 
+.login form {
+    width: 450px;
+    padding: 30px;
+    margin: auto;
+    background-color: var(--section-color);
+    box-shadow: 0px 10px 30px 0px rgba(0,0,0,0.1);
+    border-radius: 4px;
+} 
+.login form label {
+    font-size: 14px;
+    color: var(--gray-color);
+}  
+.login form .box-input {
+    display: flex;
+    align-items: center;
+    border: 1px solid #acacad;
+    background-color: var(--section-color);
+    border-radius: 4px;
+    margin: 7px 0 20px;
+}  
+.login form .box-input svg {
+    width: 50px;
+    color: var(--gray-color);
+}  
+.login form .box-input input {
+    padding: 15px;
+    width: 100%;
+    border-radius: 4px;
+    height: 100%;
+    border-left: 1px solid #e0e0e0;
+    border-top-left-radius: unset;
+    border-bottom-left-radius: unset;
+    background-color: var(--section-color);
+} 
+.login form .box-input input::placeholder {
+    font-size: 14px;
+    color: #acacad;
 }
-.login-container .loginMsg {
+.login form .box-input input:focus,
+.login form .box-input input:hover {
+    box-shadow: 0 5px 15px 0 rgba(0,0,0,0.1);
+} 
+.login form .loginMsg {
     background-color: #ffdbe3;
     display: none;
     justify-content: space-between;
@@ -94,7 +79,7 @@
     text-align: center;
     margin: 0;
 }
-.login form .loginMsg button {
+.login form .loginMsg div {
     background-color: #cd1532;
     color: #fff;
     width: 25px;
@@ -103,33 +88,52 @@
     margin: 0;
     cursor: pointer;
     transition: 0.3s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.login form .loginMsg button:hover {
+.login form .loginMsg div:hover {
     background-color: #bf1e37;
 }
-@media (max-width: 991px) {
-    .login-container .login {
-        display: unset;
-        width: 100%;
-        min-height: 100vh;
-    }
-    .login .text {
-        clip-path: none;
-        padding: 15px;
-    }
-    .login .text h1 {
-        margin: 0;
+.login form .loginBtn {
+    display: block;
+    width: 70%;
+    background-color: var(--dark-color);
+    border: 1px solid var(--dark-color);
+    padding: 15px;
+    border-radius: 50px;
+    font-weight: bold;
+    color: #fff;
+    cursor: pointer;
+    margin: 30px auto 25px;
+    transition: 0.3s;
+}
+.login form .loginBtn:hover {
+    background-color: transparent;
+    color: var(--dark-color);
+}
+.login form .box-btn {
+    display: flex;
+}
+.login form .box-btn a {
+    color: var(--dark-color);
+    font-size: 14px;
+    transition: 0.3s;
+    font-weight: bold;
+    flex: 1;
+    text-align: center;
+}
+.login form .box-btn a:hover {
+    color: var(--gray-color);
+    text-decoration: underline;
+}
+
+@media (max-width: 500px) {
+    .login h1 {
+        font-size: 26px;
     }
     .login form {
         width: 100%;
-    }
-    .login form h2 {
-        margin: 0 0 20px;
-    }
-    .login form label {
-        font-size: 14px;
-    }
-    .login form .loginBtn {
-        margin-top: 15px;
+        box-shadow: none;
     }
 }
