--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -12,9 +12,32 @@
   outline: none;
 }
 :root {
+  --blue-color: #0075ff;
+  --dark-color: #102f44;
+  --active-color: #24dac4;
   --green-color: #00a365;
-  --gray-color: #696969;
+  --gray-color: #3e4348;
+  --section-color: #f1f5f9;
+}
+::selection {
+  background-color: var(--dark-color);
+  color: #fff;
+}
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background-color: #fff;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #617481;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--dark-color);
+}
+html {
+  scroll-behavior: smooth;
 }
 body {
-  font-family: Tahoma, Arial;
+  font-family: 'Montserrat', sans-serif;
 }
