--- a/front-end/src/comp/global/css/Sidebar.css
+++ b/front-end/src/comp/global/css/Sidebar.css
@@ -1,11 +1,11 @@
 .sidebar {
     background-color: #fff;
-    box-shadow: 0 0 10px #ddd;
+    /* box-shadow: 0 0 10px #ddd; */
     position: fixed;
     bottom: 0;
     left: -215px;
     width: 215px;
-    height: calc(100vh - 76px);
+    height: calc(100vh - 57px);
     padding: 30px 0;
     transition: 0.5s;
     z-index: 99;
