--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -41,3 +41,51 @@ html {
 body {
   font-family: 'Montserrat', sans-serif;
 }
+.main-title {
+  text-transform: uppercase;
+  margin: 0 auto 80px;
+  width: fit-content;
+  padding: 10px 20px;
+  border: 2px solid var(--dark-color);
+  transition: 0.3s;
+  position: relative;
+  z-index: 1;
+  font-size: 30px;
+  color: var(--dark-color);
+}
+.main-title:hover {
+  color: white;
+  border: 2px solid white;
+  transition-delay: 0.3s;
+}
+.main-title::before, .main-title::after {
+  content: "";
+  width: 12px;
+  height: 12px;
+  position: absolute;
+  top: 50%;
+  background-color: var(--dark-color);
+  border-radius: 50%;
+  transform: translateY(-50%);
+  transition: 0.5s;
+}
+.main-title::before {
+  left: -30px;
+}
+.main-title::after {
+  right: -30px;
+}
+.main-title:hover::before {
+  left: 0;
+  border-radius: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+}
+.main-title:hover::after {
+  right: 0;
+  border-radius: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+}
